Updated DWR version, updated API class to mirror the changes made to invoiceDetails (#125)
